--- a/frontend/src/Pages/HomeList/style.css
+++ b/frontend/src/Pages/HomeList/style.css
@@ -4,11 +4,20 @@
     height: 100%;
     width: 100%;
     background-image: url("../../Assets/fundoReceita.png");
+    background-repeat: repeat;
+
 }
 
 .inter-content {
     display: flex;
     width: 100%;
     max-width: 1000px;
+    height: 100%;
     background-color: rgba(92, 92, 92, 0.623);
+}
+
+.contet {
+    margin-top: 80px;
+    margin-left: 40px;
+    margin-right: 40px;
 }
