--- a/frontend/src/Pages/HomeList/style.css
+++ b/frontend/src/Pages/HomeList/style.css
@@ -21,3 +21,59 @@
     margin-left: 40px;
     margin-right: 40px;
 }
+
+.contet ul {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+    list-style: none;
+}
+
+.card-content {
+    display: flex;
+    flex-direction: column;
+    max-width: 300px;
+    width: 100%;
+    height: 100%;
+    max-height: 280px;
+    background-color: rgba(0, 0, 0, 0.623);
+    border-radius: 8px;
+}
+
+.card-content img {
+    margin-top: 20px;
+    margin: 10px;
+    margin-top: 15px;
+    max-width: 100%;
+    height: 100px;
+}
+
+.card-content footer {
+    flex: 1;
+    color: #DF4723;
+    margin: 15px;
+    margin-top: 1px;
+}
+
+.card-content p {
+    margin-top: 8px;
+    font-size: 13px;
+    color: #fff;
+}
+
+.card-content button {
+    border: 0;
+    width: 80px;
+    height: 30px;
+    background-color: #DF4723;
+    color: #fff;
+    font-size: 14px;
+    font-weight: bold;
+    border-radius: 8px;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+.card-content button:hover {
+    background-color: rgba(223, 95, 35, 0.705);
+}
