--- a/frontend/src/Pages/MyList/style.css
+++ b/frontend/src/Pages/MyList/style.css
@@ -17,7 +17,6 @@
     max-width: 300px;
     width: 100%;
     height: 100%;
-    max-height: 280px;
     background-color: rgba(0, 0, 0, 0.623);
     border-radius: 8px;
 }
@@ -54,6 +53,11 @@
     border-radius: 8px;
     cursor: pointer;
     margin-top: 10px;
+}
+
+.button-link {
+    color: #fff;
+    text-decoration: none;
 }
 
 .card-content button:hover {
